backend/target/debug/build/crossbeam-utils-8c8c6c417f967903/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     | 
    ::: /home/actuday/.vim/bundle/YouCompleteMe/third_party/ycmd/third_party/rust-analyzer/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2141:1
     |
2141 | / atomic_int! {
2142 | |     cfg(target_has_atomic = "16"),
2143 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
2144 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2156 | |     u16 AtomicU16 ATOMIC_U16_INIT
2157 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
